Fixes gitlab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,9 +12,8 @@ variables:
 
 before_script:
   - apt-get update && apt-get -y install postgresql-client
-  - mix deps.get
-  - mix ecto.create
-  - mix ecto.migrate
+  - mix local.hex --force && mix deps.get
+  - mix ecto.create && mix ecto.migrate
 
 mix:
   script:
