Fixes gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,10 +12,10 @@ variables:
 
 before_script:
   - apt-get update && apt-get -y install postgresql-client
-  - mix local.hex --force && mix deps.get
+  - mix local.hex --force && mix local.rebar --force && mix deps.get
   - mix ecto.create && mix ecto.migrate
 
 mix:
   script:
-    - mix credo --strict
+    - mix credo
     - mix test
