--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,11 +11,14 @@ variables:
   MIX_ENV: "test"
 
 before_script:
+  # Installing required libs:
   - apt-get update && apt-get -y install postgresql-client
+  # Installing elixir deps:
   - mix local.hex --force && mix local.rebar --force && mix deps.get
-  - mix ecto.create && mix ecto.migrate
 
-mix:
+test:
+  stage: test
   script:
     - mix credo
     - mix test
+  coverage: '\[TOTAL\]\s+(\d+\.\d+)%'
