--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,10 +15,12 @@ before_script:
   - apt-get update && apt-get -y install postgresql-client
   # Installing elixir deps:
   - mix local.hex --force && mix local.rebar --force && mix deps.get
+  # Setting up env before tests:
+  - mix ecto.setup
 
 test:
   stage: test
   script:
     - mix credo
-    - mix test
-  coverage: '\[TOTAL\]\s+(\d+\.\d+)%'
+    - mix coveralls
+  coverage: '/\[TOTAL\]\s+(\d+\.\d+)%/'
