--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ variables:
 before_script:
   # Installing required libs:
   - apt-get update && apt-get -y install postgresql-client
+  - gem install danger-gitlab
   # Installing elixir deps:
   - mix local.hex --force && mix local.rebar --force
   - mix do deps.get, deps.compile
@@ -26,3 +27,10 @@ test:
     - mix credo
     - mix test --cover --timeout 1000
   coverage: '/\[TOTAL\]\s+(\d+\.\d+)%/'
+
+review:
+  stage: test
+  script:
+    - danger
+  except:
+    - master
