--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,38 +2,7 @@
 
 # Abstract jobs for future reuse:
 
-.dependabot:
-  # Base image for dependabot to update our dependencies
-  # https://github.com/dependabot/dependabot-script
-  stage: build
-  image: dependabot/dependabot-core
-  variables:
-    PACKAGE_MANAGER: $CI_JOB_NAME
-  before_script:
-    - cd infrastructure/ci/dependabot
-    - bundle install -j $(nproc) --path vendor
-  script: bundle exec ruby ./generic-update-script.rb
-  cache:
-    key: dependabot-gemspec
-    paths:
-      - vendor/
-  artifacts:
-    paths:
-      - vendor/
-  only:
-    - schedules
-
-
-# Real jobs are here:
-
-hex:
-  # Updates our `mix.exs` and `mix.lock` dependencies:
-  extends: .dependabot
-
-
-test:
-  # Project's specific CI:
-  stage: test
+.elixir:
   image: elixir:1.8.1-slim
   variables:
     POSTGRES_DB: test_test
@@ -51,6 +20,14 @@ test:
     - mix do deps.get, deps.compile
     # Setting up database:
     - mix ecto.reset
+
+
+# Real jobs are here:
+
+test:
+  # Project's specific CI:
+  extends: .elixir
+  stage: test
   script:
     - mix format --check-formatted
     - mix credo
@@ -61,19 +38,3 @@ test:
   except:
     - master
     - schedules
-
-
-review:
-  # Installing review bot (danger) and plugins to it:
-  stage: test
-  image: ruby:2.3
-  before_script:
-    - gem install danger-gitlab danger-todoist
-  script:
-    - danger --fail-on-errors=true --dangerfile-path=infrastructure/ci
-  except:
-    - master
-    - schedules
-
-# TODO: create `npx standard-version` script
-# https://github.com/vuejs/vue/blob/dev/.github/COMMIT_CONVENTION.md
