--- a/.env.template
+++ b/.env.template
@@ -15,6 +15,10 @@ KIRA_GITLAB_PERSONAL_TOKEN=
 # Can be set to any value:
 KIRA_GITLAB_SECRET_HEADER_VALUE=123
 
+# Github OAuth see: https://github.com/settings/developers
+KIRA_GITHUB_CLIENT_ID=
+KIRA_GITHUB_CLIENT_SECRET=
+
 
 # === Phoenix ===
 
