change oauth provider from github to gitlab

--- a/.env.template
+++ b/.env.template
@@ -15,10 +15,10 @@ KIRA_GITLAB_PERSONAL_TOKEN=
 # Can be set to any value:
 KIRA_GITLAB_SECRET_HEADER_VALUE=123
 
-# Github OAuth see: https://github.com/settings/developers
-KIRA_GITHUB_CLIENT_ID=
-KIRA_GITHUB_CLIENT_SECRET=
-
+# Gitlab OAuth see: https://gitlab.com/oauth/applications
+KIRA_GITLAB_CLIENT_ID=
+KIRA_GITLAB_CLIENT_SECRET=
+KIRA_GITLAB_REDIRECT_URI=
 
 # === Phoenix ===
 
