Issue 15 add GitHub oauth (#35)
* add oauth with github

* add test for oauth with github

* run formatter

* change oauth provider from github to gitlab

* update tzdata dependency

* fix style lynt

--- a/.env.template
+++ b/.env.template
@@ -15,6 +15,10 @@ KIRA_GITLAB_PERSONAL_TOKEN=
 # Can be set to any value:
 KIRA_GITLAB_SECRET_HEADER_VALUE=123
 
+# Gitlab OAuth see: https://gitlab.com/oauth/applications
+KIRA_GITLAB_CLIENT_ID=
+KIRA_GITLAB_CLIENT_SECRET=
+KIRA_GITLAB_REDIRECT_URI=
 
 # === Phoenix ===
 
